# yast-yast2

./: .cvsignore  .gitignore  .rubocop.yml  .travis.yml  .yardopts  CONTRIBUTING.md  Dockerfile  Gemfile  MAINTAINER  Makefile.cvs  POTFILES  README  README.markdown  README.md  Rakefile  VERSION  configure.in.in  patch_gnome_control_center  rubocop-1.59.0_yast_style.yml  rubocop_yast_style.yml  ruby-lint.yml  yast2.spec.in
.github/workflows/: ci.yml  submit.yml  tests.yml
agents/: Makefile.am  cfg_ypserv.scr  content.scr  etc_fstab.scr  etc_login_defs.scr  menuentries.scr  yast2_menuentry.scr
commandline/agents/: tty.scr
commandline/doc/: CommandLine.txt  Makefile.am
commandline/src/: CommandLine.ycp  Makefile.am  TypeRepository.ycp  commandline.ycp
commandline/testsuite/tests/: IPvalidation.ycp  cmdmap2.ycp  cmdmap3.ycp  cmdmap5.ycp  cmdmap6.out  cmdmap6.ycp  command4.out  command4.ycp  command5.out  command5.ycp  help.out  help1.out  help1.ycp  interactive1.ycp  interactive2.ycp  interactive3.ycp  interactive4.ycp  interactive5.out  interactive5.ycp  longhelp.out  regextype.ycp  undefinedtype.ycp  unique1.out
data/: Makefile.am  XVersion  country.ycp  country_long.ycp  sysconfig.yast2
doc/: Makefile.am  README_Generic.md  README_Generic_Autotools.md  README_Generic_Rake.md  README_Template.md  Todo.txt  desktop_file.md  etc-and-usr-etc.md  popups.xml  yast-invoking-external-commands.md  yast.8  yast2.8
doc/autodocs/: Makefile.am
doc/examples/: ask_create_backup_bad.rb  ask_create_backup_bad.ycp  ask_create_backup_good.rb  ask_create_backup_good.ycp  ask_format_hard_disk_bad.rb  ask_format_hard_disk_bad.ycp  ask_resize_windows_partition.rb  ask_resize_windows_partition.ycp  ask_show_installation_log_bad.rb  ask_show_installation_log_bad.ycp  popups1.rb  popups1.ycp  popups2.rb  popups2.ycp  popups3.rb  popups3.ycp
images/: Makefile.am  color_reduce  color_reduce_simple
mail/: Makefile.am
mail/agents/: .cvsignore  Makefile.am  ag_mailtable  mail_aliases.scr  test-mailtable  test-mailtable-1.in  test-mailtable-1.out  test-mailtable-18487.in  test-mailtable-18487.out  test-mailtable-2.in  test-mailtable-2.out  test-mailtable-3.in  test-mailtable-3.out  test-mailtable-4.in  test-mailtable-4.out
mail/src/: MailAliases.ycp  Makefile.am
mail/testsuite/tests/: mergeTables.out  mergeTables.ycp  rootalias.out  rootalias.ycp
menu/: Makefile.am  menu.ycp  readconfig.ycp  y2cc.groups
modules/: Arch.ycp  AsciiFile.ycp  Crash.ycp  Debug.ycp  Directory.ycp  Makefile.am  Mode.ycp  Version.ycp.in  eval.ycp
package/: yast2-rpmlintrc  yast2.changes  yast2.kernel-package.patch  yast2.spec  yast2.xversion.patch
remote/: Makefile.am  password.ycp  remotechooser.desktop  remotechooser.y2cc  remotechooser.ycp  remoteinstall.desktop  remoteinstall.y2cc  remoteinstall.ycp
runlevel/: Makefile.am  insserv_conf.scr
runlevel/doc/: Makefile.am  index.html  runlevel.html  start_variables.txt
runlevel/src/: Makefile.am  Runlevel.ycp  ag_initscripts  initscripts.scr  toposort.ycp
runlevel/testsuite/config/: unix.exp
runlevel/testsuite/tests/: RunInitScript.ycp  ServiceAdjust.out  ServiceAdjust.ycp  ServiceDependencies.out  ServiceDependencies.ycp  ServiceFinetune.out  ServiceFinetune.ycp  ServiceFullInfo.ycp  ServiceStatus.ycp  dirtyServices.out  dirtyServices.ycp  getDefaultPicker.out  getDefaultPicker.ycp  getScripts.out  getScripts.ycp  insserv_conf.ycp.out  isDisabled.out  isDisabled.ycp  overviewText.out  overviewText.ycp  saveServices.out  saveServices.ycp  scripts.ycp.out  servicesToTable.out  servicesToTable.ycp  setServiceToDefault.out  setServiceToDefault.ycp  toposort.out  toposort.ycp
scripts/: Makefile.am  README.scripts  YaST2  save_y2logs  yast  yast2  yast2-completion.sh  yast2-funcs  yast2_kde
scripts/completions/: yast
scripts/legacy_sbin/: yast  yast2
sequencer/doc/: Makefile.am  descr.html  examples.html  index.html  todo.html
sequencer/doc/autodocs/: Makefile.am
sequencer/doc/examples/: Makefile.am  example1.ycp  example2.ycp  example3.ycp  example4.ycp  examples.ycp
sequencer/doc/images/: Makefile.am
sequencer/src/: Makefile.am  sequencer.ycp
sequencer/testsuite/: Makefile.am
sequencer/testsuite/tests/: WS_alias.ycp  WS_check.out  WS_check.ycp  WS_error.ycp  WS_next.ycp  WS_pop.ycp  WS_push.ycp  WS_run.ycp  WS_special.ycp  WS_testall.ycp  Wizard.yh  Wizard7.ycp
sorbet/: config  list_of_rbis
sorbet/rbi/: todo.rbi
sorbet/rbi/gems/: abstract_method.rbi  cheetah.rbi  simpleidn.rbi  unf.rbi
sorbet/rbi/hidden-definitions/: errors.txt  hidden.rbi
src/: Makefile.am  menu.ycp  y2cc.groups
test/: Makefile.am  test_helper.rb  yast2_test.rb
test/test_y2dir/clients/: args_test_client.rb
wizard/: Makefile.am
wizard/doc/: Makefile.am  Progress.html  common_popups_doc.html
wizard/doc/autodocs/: .cvsignore  Makefile.am
wizard/doc/examples/: Makefile.am  popups1.ycp  popups2.ycp  start-wizard-easy-installation  wizard1.ycp
wizard/images/: .cvsignore  Makefile.am
wizard/src/: HTML.ycp  Label.ycp  Makefile.am  NetworkPopup.ycp  Popup.ycp  Progress.ycp  README.popups  Report.ycp  Summary.ycp  Wizard.ycp  Wizard_hw.ycp  common_functions.ycp  common_messages.ycp  common_popups.ycp  file_popups.ycp  migrate_common_popups  summary.ycp  wizard_dialog.ycp
wizard/testsuite/: .cvsignore
wizard/testsuite/lib/: test_init.exp
wizard/testsuite/tests/: wizard_dialog.ycp
x11/: .cvsignore  Makefile.am  X11Version.ycp  version.c
y2menu/: .cvsignore  MAINTAINER  Makefile.am  colors.h  myintl.cc  myintl.h  parsecfg.cc  parseyast.cc  parseyast.h  util.cc  y2menu-color  yast.h  yast2.cc  yastfunc.h  yastmenu.cc
yast2/: .cvsignore  MAINTAINER  RPMNAME  VERSION  yast2.spec.in
yast2/doc/: Todo.txt  crash.xml  popups.xml  yast2.8
yast2/doc/examples/: ask_create_backup_bad.ycp  ask_create_backup_good.ycp  ask_format_hard_disk_bad.ycp  (+1 more)
yast2/package/: .cvsignore  yast2.changes  yast2.post
yast2/remote/: Makefile.am  remotechooser.desktop  remoteinstall.desktop
yast2/scripts/: Makefile.am  check-all-syntax  yast2
(+3 files in other folders)
