#
# Makefile.am for yast2/data
#

xversiondir = $(sysconfdir)/YaST2

xversion_DATA =			\
	XVersion

fillup_DATA =			\
	sysconfig.yast2

ydata_DATA =                    \
        country_long.ycp        \
	country.ycp

EXTRA_DIST = $(xversion_DATA) $(fillup_DATA) $(ydata_DATA)
include $(top_srcdir)/Makefile.am.common
