#
# Makefile.am for yast2/data
#

xversiondir = $(sysconfdir)/YaST2

xversion_DATA =			\
	XVersion

scalabledir = @icondir@/hicolor/scalable/apps
scalable_DATA = \
	icons/hicolor/scalable/apps/yast-hardware-group.svg \
	icons/hicolor/scalable/apps/yast-high_availability-group.svg \
	icons/hicolor/scalable/apps/yast-messages.svg \
	icons/hicolor/scalable/apps/yast-misc-group.svg \
	icons/hicolor/scalable/apps/yast-network-group.svg \
	icons/hicolor/scalable/apps/yast-remote-chooser.svg \
	icons/hicolor/scalable/apps/yast-remote-install.svg \
	icons/hicolor/scalable/apps/yast-security-group.svg \
	icons/hicolor/scalable/apps/yast-software-group.svg \
	icons/hicolor/scalable/apps/yast-support-group.svg \
	icons/hicolor/scalable/apps/yast-system-group.svg \
	icons/hicolor/scalable/apps/yast-vm-group.svg \
	icons/hicolor/scalable/status/dialog-error.svg \
	icons/hicolor/scalable/status/dialog-information.svg \
	icons/hicolor/scalable/status/dialog-question.svg \
	icons/hicolor/scalable/status/dialog-warning.svg

EXTRA_DIST = $(xversion_DATA) $(scalable_DATA)
include $(top_srcdir)/Makefile.am.common
