#
# Makefile.am for y2m_inst/images
#

image_DATA =					\
	active_bottomLeft_corner.png		\
	active_bottomTile.png			\
	active_insideBottom_corner.png		\
	active_insideTop_corner.png		\
	active_leftTile.png			\
	active_topLeft_corner.png		\
	active_topTile.png			\
	button_active.png			\
	button_done.png				\
	button_normal.png			\
	card1_left.png				\
	card1_right.png				\
	card2_left.png				\
	card2_right.png				\
	card3_left.png				\
	card3_right.png				\
	fullBottom_tile.png			\
	full_1.png				\
	full_2.png				\
	full_3.png				\
	full_4.png				\
	help_bottom.png				\
	help_left.png				\
	help_right.png				\
	help_top.png				\
	inactive_bottomLeft_corner.png		\
	inactive_bottomRight_corner.png		\
	inactive_bottomTile.png			\
	inactive_leftTile.png			\
	inactive_rightTile.png			\
	inactive_topLeft_corner.png		\
	inactive_topRight_corner.png		\
	inactive_topTile.png


imagedir = $(datadir)/images

EXTRA_DIST = $(image_DATA)
