# Makefile.am for yast2/remote

client_DATA =			\
	password.ycp		\
	remotechooser.ycp	\
	remoteinstall.ycp

config_DATA = #			\
	remotechooser.y2cc	\
	remoteinstall.y2cc

desktop_DATA = #		\
	remotechooser.desktop	\
	remoteinstall.desktop

EXTRA_DIST = $(client_DATA) # $(config_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
