#
# Makefile.am for yast2/remote
#

client_DATA =			\
	password.ycp		\
	remotechooser.ycp	\
	remoteinstall.ycp

desktop_DATA = #		\
	remotechooser.desktop	\
	remoteinstall.desktop

YCPCFLAGS = -M ../library/modules

EXTRA_DIST = $(client_DATA) # $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
