#
# Makefile.am for CommandLine interface sources
#

yncludedir = @yncludedir@/commandline

client_DATA =			

ynclude_DATA = commandline.ycp

config_DATA =			
#	commandline.y2cc

module_DATA =			\
	CommandLine.ycp		\
	TypeRepository.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
