#
# Makefile.am for y2c_mail/agents
#
# $Id$
#

agent_SCRIPTS = ag_mailtable

scrconf_DATA = 	mail_aliases.scr

TESTS = test-mailtable
testdata = \
	test-mailtable-1.in test-mailtable-1.out \
	test-mailtable-2.in test-mailtable-2.out

EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA) $(TESTS) $(testdata)
