#
# Makefile.am for yast2-lib-wizard/doc
#

SUBDIRS = autodocs examples

docdir = @docdir@/wizard
htmldir = $(docdir)

html_DATA = $(wildcard *.html *.png)
EXTRA_DIST = $(html_DATA)

#common_popups_doc.html	\
#	AnyQuestion.png		\
#	ConfirmAbort.png	\
#	ContinueCancelHeadline.png	\
#	ContinueCancel.png	\
#	Error.png	\
#	LongText.png	\
#	Message.png	\
#	ModuleError.png	\
#	Notify.png	\
#	TimedMessage.png	\
#	Warning.png	\
#	YesNoHeadline.png	\
#	YesNo.png

