#
# Makefile.am for y2l_wizard/src
#

yncludedir = @yncludedir@/ui

module_DATA =			\
	Wizard.ycp		\
	Wizard_hw.ycp		\
	Progress.ycp		\
	Report.ycp		\
	Summary.ycp		\
	HTML.ycp

ynclude_DATA =			\
	wizard_dialog.ycp	\
	common_popups.ycp	\
	file_popups.ycp		\
	common_messages.ycp	\
	common_functions.ycp	\
	summary.ycp

EXTRA_DIST = $(ynclude_DATA) $(module_DATA)
