#
# Makefile.am for yast2/wizard/src
#

yncludedir = @yncludedir@/ui

module_DATA =			\
	Popup.ycp		\
	Wizard.ycp		\
	Wizard_hw.ycp		\
	Progress.ycp		\
	Report.ycp		\
	Summary.ycp		\
	HTML.ycp

ynclude_DATA =			\
	common_popups.ycp	\
	file_popups.ycp		\
	common_messages.ycp	\
	common_functions.ycp	\
	summary.ycp

EXTRA_DIST = $(ynclude_DATA) $(module_DATA)
